#![feature(error_iter)]
[package]
name = "activitypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query"] }
contextual = "0.1.6"
iref = "2.2.3"
json-ld = { version = "0.15.0", features = ["reqwest"] }
locspan = "0.7.16"
rdf-types = "0.15.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.68"
static-iref = "2.0.0"
surrealdb = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4.1"
once_cell = "1.18.0"
tower = "0.4.13"
json-ld-syntax = "0.15.0"
chrono = "0.4.31"
rsa = { version = "0.9.3", features = ["sha2"] }
struct-field-names-as-array = "0.3.0"
